--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,9 @@
 @tailwind components;
 @tailwind utilities;
 
-
+::-webkit-scrollbar {
+  display: none;
+}
 html, body {
   margin: 0;
   padding: 0;
